Resolvimos los problemas relacionados con el frmPatients que cusaba que se insertaran registros de la huella del paciente sin nombre y otros campos, se resolvió el problema del inicio de sesión que se generaba por una desconección de la base de datos al ingresar username y password inválidos o vacíos.

--- a/src/View/formEnterFinger.form
+++ b/src/View/formEnterFinger.form
@@ -141,7 +141,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3d" green="33" red="25" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="POR FAVOR INGRESA TU HUELLA"/>
+                <Property name="text" type="java.lang.String" value="INGRESA LA HUELLA A ASOCIAR"/>
               </Properties>
             </Component>
           </SubComponents>
