--- a/src/View/formEnterFinger.form
+++ b/src/View/formEnterFinger.form
@@ -141,7 +141,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3d" green="33" red="25" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="INGRESA LA HUELLA A ASOCIAR"/>
+                <Property name="text" type="java.lang.String" value="INGRESA 4 VECES LA HUELLA A ASOCIAR "/>
               </Properties>
             </Component>
           </SubComponents>
