Se solucionó el error que no permitía iniciar sesión correctamente modificando los indices de la asignación del resultSet en el método userValidator
ok

--- a/src/View/formPatients.form
+++ b/src/View/formPatients.form
@@ -296,6 +296,7 @@
                   <Color blue="bb" green="bb" red="bb" type="rgb"/>
                 </Property>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
+                <Property name="requestFocusEnabled" type="boolean" value="false"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
