--- a/src/View/formPatients.form
+++ b/src/View/formPatients.form
@@ -267,11 +267,11 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="comboMunicipio" alignment="0" min="-2" pref="26" max="-2" attributes="0"/>
+                          <Component id="btnHC" alignment="0" min="-2" pref="26" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="comboSexo" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="btnHC" alignment="0" min="-2" pref="26" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -967,6 +967,9 @@
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3d" green="33" red="25" type="rgb"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/hc_20px.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Asociar Historia Cl&#xed;nica"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
