Reestructuramos el proyecto con un nuevo paquete DAO con las clases del objeto de acceso de datos DAO y creamos el método editRowTable, se eliminó la clase controller que no hacía nada y renombramos las clases de formSettings y formUsers por Upper camel case

--- a/src/View/FormPatientsManagement.form
+++ b/src/View/FormPatientsManagement.form
@@ -589,11 +589,12 @@
                   <Color blue="3d" green="33" red="25" type="rgb"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
+                  <StringArray count="5">
                     <StringItem index="0" value="SELECCIONAR"/>
                     <StringItem index="1" value="Arhuaco"/>
                     <StringItem index="2" value="Kogui"/>
                     <StringItem index="3" value="Wiwa"/>
+                    <StringItem index="4" value="Otro"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -847,6 +848,9 @@
                   <Color blue="bb" green="bb" red="bb" type="rgb"/>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
             </Component>
             <Component class="javax.swing.JComboBox" name="comboMunicipio">
               <Properties>
@@ -870,6 +874,7 @@
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </Component>
             <Component class="javax.swing.JComboBox" name="comboComunidad">
@@ -911,6 +916,7 @@
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </Component>
             <Component class="javax.swing.JComboBox" name="comboRh">
@@ -983,6 +989,9 @@
                 <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnHCMouseEntered"/>
                 <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnHCMouseExited"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
