--- a/src/View/FormPatientsManagement.form
+++ b/src/View/FormPatientsManagement.form
@@ -1003,7 +1003,7 @@
             <Component class="javax.swing.JLabel" name="lblIndicadorQuery">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Light" size="16" style="0"/>
+                  <Font name="Segoe UI Symbol" size="16" style="0"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
